infrastructure/k8s/k3s-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stockifai
